--- a/fastlane/test_output/report.html
+++ b/fastlane/test_output/report.html
@@ -5,7 +5,7 @@
     <title>Test Results | xcpretty</title>
     <style type="text/css">
       body { font-family:Avenir Next, Helvetica Neue, sans-serif; color: #4A4A4A; background-color: #F0F3FB; margin:0;}
-      h1 { font-weight: normal; font-size: 24px; margin: 10px 0 0 0;}
+      h1 { font-weight: normal; font-size: 24px; margin: 10px 0 0;}
       h3 { font-weight: normal; margin: 2px; font-size: 1.1em;}
       header { position: fixed;width: 100%;background: rgba(249, 254, 255, 0.9);margin: 0;padding: 10px;}
       header:before, header:after { content:""; display:table;}
@@ -16,7 +16,7 @@
       tr td:first-child { width:7%}
       .left { float: left; margin-left:30px;}
       .right { float: right; margin-right: 40px; margin-top: 0; margin-bottom:0;}
-      .test-suite { margin: 0 0 30px 0;}
+      .test-suite { margin: 0 0 30px;}
       .test-suite > .heading { font-family:Menlo, Monaco, monospace; font-weight: bold; border-color: #A1D761; background-color: #B8E986; border-width: 1px;}
       .test-suite.failing > .heading { border-color: #C84F5E; background-color: #E58591;}
       .test-suite > .heading > .title { margin-top: 4px; margin-left: 10px;}
@@ -35,8 +35,8 @@
       .test .test-detail:last-child { padding-bottom: 8px;}
       .test .title { float: left; font-size: 0.9em; margin-top: 8px; font-family: Menlo, Monaco, monospace;}
       .test .time { float: left;margin: 4px 10px 0 20px;}
-      .test-detail { font-family:Menlo, Monaco, monospace; font-size: 0.9em; margin: 5px 0 5px 0px;}
-      .screenshots { height: auto; overflow: hidden; padding: 4px 4px 0 4px; background-color: #B8E986; border: #A1D761; border-width: 0 1px; border-style: solid; }
+      .test-detail { font-family:Menlo, Monaco, monospace; font-size: 0.9em; margin: 5px 0;}
+      .screenshots { height: auto; overflow: hidden; padding: 4px 4px 0; background-color: #B8E986; border: #A1D761; border-width: 0 1px; border-style: solid; }
       .screenshots.failing { border-color: #C84F5E; background-color: #E58591; }
       .screenshot { max-height: 60px; float: left; transition: max-height 0.2s; margin: 0 4px 4px 0 }
       .screenshot.selected { max-height: 568px; }
